Zmiana wygladu i dzialania obecnosci